Изменён цвет заднего фона страницы

--- a/Sample03.html
+++ b/Sample03.html
@@ -3,7 +3,7 @@
     <meta charset="utf-8" />
     <title> My first Page </title>
     <style>
-    body{background-color:red;}
+    body{background-color:rgb(136, 108, 108);}
     p{color:green;}
     </style>
     <script>
