--- a/Sample02.html
+++ b/Sample02.html
@@ -4,7 +4,7 @@
     <title> My first Page </title>
     <style>
     body{background-color:red;}
-    p{color:green;}
+    p{color:rgb(0, 0, 0);}
     </style>
     </head>
     <body>
